[tool.poetry]
name = "paperboy"
version = "0.1.0"
description = "Kafka ingester for python built around aiokafka"
authors = ["Franck Lourme <coton@42.fr>"]
readme = "README.md"
packages = [{ include = "paperboy" }]

[tool.poetry.dependencies]
python = "^3.11"
aiokafka = "^0.8.1"
python-schema-registry-client = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
